--- a/2_Basic_Data_Types.ipynb
+++ b/2_Basic_Data_Types.ipynb
@@ -513,15 +513,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionary:\n",
+    "    Datatype which store values in pairs ,there unique key that points to a values\n",
+    "- Key of dictionary -> not mutable(cant be changed)\n",
+    "- Value of dictionary -> mutuable(can be changed)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_dict ={'one':1} \n",
+    "# here 'one' -> is key\n",
+    "# here 1 -> is the value\n",
+    "print(a_dict['one'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "Krishna 67 68 69\n",
+      "Arjun 70 98 63\n",
+      "Malika 52 56 60\n",
+      "Malika\n",
+      "56.0\n"
      ]
     }
    ],
