--- a/3.Strings.ipynb
+++ b/3.Strings.ipynb
@@ -832,17 +832,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AABCAAADA\n",
+      "3\n",
+      "AB\n",
+      "CA\n",
+      "AD\n"
+     ]
+    }
+   ],
    "source": [
-    "    for j in range(0,(len(temp)-1)):\n",
-    "        for k in range(j+1,len(temp)):\n",
-    "            if(temp[j]==temp[k]):\n",
-    "                print(temp[j],\"==\",temp[k])\n",
-    "                temp.replace(temp[j],\"\")"
+    "s = input()\n",
+    "k = int(input())\n",
+    "num_subsegments = int(len(s) / k)\n",
+    "\n",
+    "for index in range(num_subsegments):\n",
+    "    # Subsegment string\n",
+    "    t = s[index * k : (index + 1) * k]\n",
+    "    \n",
+    "    # Subsequence string having distinct characters\n",
+    "    u = \"\"\n",
+    "    \n",
+    "    # If a character is not already in 'u', append\n",
+    "    for c in t:\n",
+    "        if c not in u:\n",
+    "            u += c\n",
+    "\n",
+    "    # Print final converted string\n",
+    "    print(u)"
    ]
   }
  ],
